--- a/main/index.html
+++ b/main/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html >
   <head>
     <meta charset="UTF-8">
@@ -56,7 +55,7 @@ a:active {
       <h1>Teepee Sanguine</h1>
     <p>your local girl gang</p></div>
     <!-- <div class="container">
-      <div class="col-xs-3"></div>
+      <div class="col-md-3"></div>
       <a href="/Math"><div class="col-xs-3" id="math8"><BR>Math 8<sup>th</sup><p>
         <img src="http://pi-pizza.com/apple-touch-icon-precomposed.png" width=50%></p></div></a>
       <a href="/Tech"><div class="col-xs-3" id="tech9"><BR>Tech 9<sup>th</sup><BR> <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Computer_lab_icon.svg/1024px-Computer_lab_icon.svg.png" width=40% style="margin-top:10px"></p></div></a><div class="col-xs-3"></div>
