--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ a:active {
     <div class="page-header" id="name">
       <h1>Teepee Sanguine</h1>
     <p>your local girl gang</p></div>
-    <div class="col-xs-6" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div><div class="col-xs-6" id="textholder">This is under construction 5ever.</div></div>
+    <div class="col-sm-2"></div>
+    <div class="col-sm-2" id="linkbar">A LINK!</div>
+    <div class="col-sm-2" id="linkbar">A LINK!</div>
+    <div class="col-sm-2" id="linkbar">A LINK!</div>
+    <div class="col-sm-2" id="linkbar">A LINK!</div>
+    <div class="col-sm-2"></div>
+    <div class="col-sm-6" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div><div class="col-sm-6" id="textholder">This is under construction 5ever.</div>
     <!-- <div class="container">
       <div class="col-md-3"></div>
       <a href="/Math"><div class="col-xs-3" id="math8"><BR>Math 8<sup>th</sup><p>
