--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a:active {
     <div class="page-header" id="name">
       <h1>Teepee Sanguine</h1>
     <p>your local girl gang</p></div>
-    <div class="col-sm-2" id="linkbar">idk animals?</div>
+    <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
     <div class="col-sm-2" id="linkbar">members</div>
     <div class="col-sm-2" id="linkbar">adventure</div>
     <div class="col-sm-2" id="linkbar">feed</div>
