--- a/idkanimals.html
+++ b/idkanimals.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Teepee Sanguine | your local girl gang</title>
+    <title>Teepee Sanguine | IDK ANIMALS?</title>
 
     <link rel="stylesheet" href="css/animalstyle.css">
 
