--- a/index.html
+++ b/index.html
@@ -51,26 +51,13 @@ a:active {
       <h1>Teepee Sanguine</h1>
     <p>your local girl gang</p></div>
     <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
-    <div class="col-sm-2" id="linkbar">members</div>
+    <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
     <div class="col-sm-2" id="linkbar">adventure</div>
     <div class="col-sm-2" id="linkbar">feed</div>
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
     <div class="col-sm-6" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div><div class="col-sm-6" id="textholder">This is under construction 5ever.</div>
-    <!-- <div class="container">
-      <div class="col-md-3"></div>
-      <a href="/Math"><div class="col-xs-3" id="math8"><BR>Math 8<sup>th</sup><p>
-        <img src="http://pi-pizza.com/apple-touch-icon-precomposed.png" width=50%></p></div></a>
-      <a href="/Tech"><div class="col-xs-3" id="tech9"><BR>Tech 9<sup>th</sup><BR> <p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/93/Computer_lab_icon.svg/1024px-Computer_lab_icon.svg.png" width=40% style="margin-top:10px"></p></div></a><div class="col-xs-3"></div>
 
-        <div class="container">
-          <div class="col-xs-6" id="resume"><BR><B><a href="FILLTHISINLATER.COM">RESUMÉ</a></BR></div>
-            <div class="col-xs-6" id="tenure"><BR><a href="FILLTHISINLATER.COM">TENURE</a></BR></div>
-          <div class="container">
-            <div class="col-xs-12" id="contact"><a href="FILLTHISINLATER.COM">CONTACT</a></B></div>
-
-            <div class="container">
-              <div class="col-xs-12" id="cat"><img src="https://www.friskies.com/Content/images/catconcoctions/home-cat.png" width=40%> -->
 
 
 
