--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a:active {
     <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
     <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
     <div class="col-sm-2" id="linkbar">adventure</div>
-    <div class="col-sm-2" id="linkbar">feed</div>
+    <div class="col-sm-2" id="linkbar"><a href=feed.html>feed</a></div>
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
     <div class="col-sm-6" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div><div class="col-sm-6" id="textholder">This is under construction 5ever.</div>
