--- a/members.html
+++ b/members.html
@@ -53,7 +53,7 @@ a:active {
     <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
     <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
     <div class="col-sm-2" id="linkbar">adventure</div>
-    <div class="col-sm-2" id="linkbar">feed</div>
+    <div class="col-sm-2" id="linkbar"><a href=feed.html>feed</a></div>
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
 
