--- a/feed.html
+++ b/feed.html
@@ -49,7 +49,7 @@ a:active {
   <div class="container">
     <div class="page-header" id="name">
       <h1>Teepee Sanguine</h1>
-    <p>your local girl gang</p></div>
+    <p>your local girl gang | <a href=index.html>home</a></p></div>
     <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
     <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
     <div class="col-sm-2" id="linkbar">adventure</div>
