--- a/members.html
+++ b/members.html
@@ -22,12 +22,12 @@
   <style>
   /* unvisited link */
 a:link {
-    color: white;
+    color: yellow;
 }
 
 /* visited link */
 a:visited {
-    color: white;
+    color: yellow;
 }
 
 /* mouse over link */
