trying to get the adventure page running

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a:active {
     <p>your local girl gang</p></div>
     <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
     <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
-    <div class="col-sm-2" id="linkbar">adventure</div>
+    <div class="col-sm-2" id="linkbar"><a href=adventure.html>adventure</a></div>
     <div class="col-sm-2" id="linkbar"><a href=feed.html>feed</a></div>
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
