--- a/adventure.html
+++ b/adventure.html
@@ -57,7 +57,7 @@ a:active {
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
 
-    <div class="col-sm-4" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div>
+    <div class="col-sm-4" id="pictureholder"><iframe src="https://calendar.google.com/calendar/embed?src=fordham.edu_bgo0vnhiliq1kl501fvn1i8q8s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="300" height="300" frameborder="0" scrolling="no"></iframe></div>
     <div class="col-sm-4" id="textholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/lizlemon1.gif?raw=true"></div>
     <div class="col-sm-4" id="textholder">This is under construction 5ever.</div>
 
