--- a/adventure.html
+++ b/adventure.html
@@ -58,8 +58,19 @@ a:active {
     <div class="col-sm-2" id="linkbar">contact</div>
 
     <div class="col-sm-4" id="pictureholder"><iframe src="https://calendar.google.com/calendar/embed?src=fordham.edu_bgo0vnhiliq1kl501fvn1i8q8s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="300" height="300" frameborder="0" scrolling="no"></iframe><p>Can we put in a map with our (general) locations to RePrEsEnT?</p></div>
-    <div class="col-sm-4" id="textholder">Can we do the google agenda here maybe?</div>
-    <div class="col-sm-4" id="textholder">Link roll up or something of popular spots? Idk</div>
+    <div class="col-sm-4" id="actionitems"><B>Happening Now</B><p>
+    <ul><li><B>Book Club:</B> <i>Homegoing</i> by Yaa Gyasi</li>
+      <ul><li><B>Next Month:</B> <i>All Our Wrong Todays: A Novel</i> by Elan Mastai</li>
+        <li><B>Suggest a Book?</B> E-mail a Teepee Member</li></ul>
+      <li><B>Big Events:</B></li>
+      <ul><li>Lauren's Stylish Send-Off</li>
+        <li>Teepee Tours: Milwaukee</li>
+        <li>Baby Leah Turns 1</li></ul>
+    </ul>></div>
+    <div class="col-sm-4" id="textholder"><B>Things We Like</B>
+    <ul><li>An important list</li>
+    <li>Of local spots</li>
+  <li>And local events</li></ul></div>
 
 
 
