--- a/adventure.html
+++ b/adventure.html
@@ -67,7 +67,7 @@ a:active {
         <li>Teepee Tours: Milwaukee</li>
         <li>Baby Leah Turns 1</li></ul>
     </ul>></div>
-    <div class="col-sm-4" id="textholder"><B>Things We Like</B>
+    <div class="col-sm-4" id="welike"><B>Things We Like</B>
     <ul><li>An important list</li>
     <li>Of local spots</li>
   <li>And local events</li></ul></div>
