--- a/adventure.html
+++ b/adventure.html
@@ -57,7 +57,7 @@ a:active {
     <div class="col-sm-2" id="linkbar">idk!</div>
     <div class="col-sm-2" id="linkbar">contact</div>
 
-    <div class="col-sm-4" id="pictureholder"><iframe src="https://calendar.google.com/calendar/embed?src=fordham.edu_bgo0vnhiliq1kl501fvn1i8q8s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="300" height="300" frameborder="0" scrolling="no"></iframe><p>Can we put in a map with our (general) locations to RePrEsEnT?</p></div>
+    <div class="col-sm-4" id="actionitems"><iframe src="https://calendar.google.com/calendar/embed?src=fordham.edu_bgo0vnhiliq1kl501fvn1i8q8s%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="300" height="300" frameborder="0" scrolling="no"></iframe><p>Can we put in a map with our (general) locations to RePrEsEnT?</p></div>
     <div class="col-sm-4" id="actionitems"><B>Happening Now</B><p>
     <ul><li><B>Book Club:</B> <i>Homegoing</i> by Yaa Gyasi</li>
       <ul><li><B>Next Month:</B> <i>All Our Wrong Todays: A Novel</i> by Elan Mastai</li>
