--- a/index.html
+++ b/index.html
@@ -3,69 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Teepee Sanguine | your local girl gang</title>
+<link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="teepee.css">
 
+  </head>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-  <!-- Fonts here -->
-  <link href="https://fonts.googleapis.com/css?family=Megrim|Roboto+Slab" rel="stylesheet">
-
-  <style>
-  /* unvisited link */
-a:link {
-    color: white;
-}
-
-/* visited link */
-a:visited {
-    color: white;
-}
-
-/* mouse over link */
-a:hover {
-    color: hotpink;
-}
-
-/* selected link */
-a:active {
-    color: hotpink;
-}
-  </style>
-</head>
-
-<!-- Content Starts Here -->
-
-<body>
-
-  <div class="container">
-    <div class="page-header" id="name">
-      <h1>Teepee Sanguine</h1>
-    <p>your local girl gang</p></div>
-    <div class="col-sm-2" id="linkbar"><a href=idkanimals.html>idk animals?</a></div>
-    <div class="col-sm-2" id="linkbar"><a href=members.html>members</a></div>
-    <div class="col-sm-2" id="linkbar"><a href=adventure.html>adventure</a></div>
-    <div class="col-sm-2" id="linkbar"><a href=feed.html>feed</a></div>
-    <div class="col-sm-2" id="linkbar">idk!</div>
-    <div class="col-sm-2" id="linkbar">contact</div>
-    <div class="col-sm-6" id="pictureholder"><img src="https://github.com/teepeesanguine/teepeesanguine.github.io/blob/master/boring.gif?raw=true"></div><div class="col-sm-6" id="textholder">This is under construction 5ever.</div>
-
-
-
-
-  </body>
-
-
-
-
+  <body>
+    <div>
+      <h1>Teepee Sanguine:</h1>
+      <p id="type">noun | te·pee | \ ˈtē-(ˌ)pē  \ </p>
+      <ol>
+        <li>A strange autocorrect, derivation unknown</li>
+        <li>A collective ('gang') of women in staunch support of other women.</li>
+    </div>
 
   </body>
 </html>
