--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div>
       <h1>Teepee Sanguine:</h1>
-      <p id="type">noun | te·pee | \ ˈtē-(ˌ)pē  \ </p>
+      <p id="type">noun | te·pee | \ ˈtē-(ˌ)pē  \ san·guine | \ ˈsaŋ-gwən  \ </p>
       <ol>
         <li>A strange autocorrect, derivation unknown</li>
         <li>A collective ('gang') of women in staunch support of other women.</li>
